add more flexibility in the api to handle added fields in the database
